// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileElement renders a curved-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M -45,0 A 10,10 0 0 1 -55,10 L -54.99999999999999,100 A 100,100 0 0 0 45,0 Z"
      transform=""
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a curved-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 55,200 A 10,10 0 0 1 45,210 L 45.00000000000001,300 A 100,100 0 0 0 145,200 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a curved-tile-enlarged element with default values 1`] = `
<body>
  <div>
    <path
      d="M -45,0 A 10,10 0 0 1 -55,10 V 100 H 0 A 45,45 0 0 0 45,55 V 0 Z"
      transform=""
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a curved-tile-enlarged element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 55,200 A 10,10 0 0 1 45,210 V 300 H 100 A 45,45 0 0 0 145,255 V 200 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a straight-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M -45,0 H 45 V 110 H -45 Z"
      transform=""
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a straight-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement renders a undefined element with default values 1`] = `
<body>
  <div>
    <path
      d="M -45,0 H 45 V 110 H -45 Z"
      transform=""
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter d is modified 1`] = `
<body>
  <div>
    <path
      d="M 45,190 H 155 V 320 H 45 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)rotate(180 100 255)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(45 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 H 145 V 310 H 55 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter type is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,200 A 10,10 0 0 1 45,210 L 45.00000000000001,300 A 100,100 0 0 0 145,200 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter x is modified 1`] = `
<body>
  <div>
    <path
      d="M -5,200 H 85 V 310 H -5 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 40 200)"
    />
    
    
  </div>
</body>
`;

exports[`TileElement updates when the parameter y is modified 1`] = `
<body>
  <div>
    <path
      d="M 55,40 H 145 V 150 H 55 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90 100 40)"
    />
    
    
  </div>
</body>
`;
